Ganesh Project/src/objects/Order_Product_Contact_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Product - Contact Junction</relationshipLabel>
        <relationshipName>Order_Product_Contact_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <label>Order Product</label>
        <referenceTo>Order_Product__c</referenceTo>
        <relationshipLabel>Order Product - Contact Junction</relationshipLabel>
        <relationshipName>Order_Product_Contact_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Product - Contact Junction</label>
    <nameField>
        <label>Order Product - Contact Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Product - Contact Junction</pluralLabel>
    <recordTypes>
        <fullName>Registered</fullName>
        <active>true</active>
        <label>Registered</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration_Available_Students</fullName>
        <active>true</active>
        <label>Registration - Available Students</label>
    </recordTypes>
    <recordTypes>
        <fullName>TBD</fullName>
        <active>true</active>
        <label>TBD</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>